# mlflow-mongodb

./: .gitignore  COMMIT_GUIDE.md  FIX_SUMMARY.md  LICENSE  MANIFEST.in  PYPI_PACKAGE_GUIDE.md  README.md  Readme.md  create.sh  mlflow_server_mongodb.py  pyproject.toml  requirements.txt  setup.py
mlflow_mongodb/: MANIFEST.in  __init__.py  db_utils.py  registration.py  requirements.txt  setup.py
mlflow_mongodb/model_registry/: __init__.py  mongodb_store.py
mlflow_mongodb/scripts/debugging/: debug_prompt_filter.py  debug_protobuf_conversion.py  debug_registered_model_tags.py  debug_traces_direct.py
mlflow_mongodb/scripts/setup/: mlflow_server_mongodb.py
mlflow_mongodb/scripts/testing/: test_setup_mongodb_deployment.py
mlflow_mongodb/tests/integration/: model_run_tracking.py  prompt_registry_llm_tracking.py  test_tracing_debug.py
mlflow_mongodb/tests/unit/: test_mongodb_store.py  test_tracking_store.py
mlflow_mongodb/tracking/: __init__.py  mongodb_store.py
